[package]
name = "IP-Hacker"
version = "0.0.15"
edition = "2024"
authors = ["GenshinMinecraft <gm@highp.ing>"]
description = "IP tools used by Russia's big hackers"
readme = "README.md"
repository = "https://github.com/rsbench/IP-Hacker"
license = "MIT"
homepage = "https://rsbench.github.io"

[package.metadata.deb]
maintainer = "GenshinMinecraft"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
lazy_static = "1.5.0"
regex = { version = "1.11.1", default-features = false, features = ["unicode", "std"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "socks", "rustls-tls", "cookies"] }
crossterm = { version = "0.29.0", default-features = false, features = ["windows", "serde"] }
#rand = { version = "0.9.1", features = ["std", "std_rng"] }
#termcolor = "1.4.1"
log = "0.4.27"
prettytable-rs = "0.10.0"
clap = { version = "4.5.37",default-features = false, features = ["help", "derive", "suggestions", "std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["std"], default-features = false }
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros"] }
async-trait = "0.1.88"

[workspace.metadata.cross.target.aarch64-linux-android]
image = "genshinmc/rust-cross-new-ndk-aarch64-linux-android:0.0.1"

[workspace.metadata.cross.build.env]
passthrough = [
    "CROSS_PASTEBIN_URL",
    "CROSS_PASTEBIN_SECRET",
]

[profile]
dev = { opt-level = 3 }
release = { opt-level = 3, lto = true, codegen-units = 1, panic = "abort" }
minimal = { inherits = "release", opt-level = "z", lto = true, codegen-units = 1, panic = "abort", debug = false }